Improve rounding in QCosmeticStroker

Fixes the drawn position of end points in drawLine.

Based on a patch by Jørgen Lind, and modified so that
it caused no test regressions.

Task-number: QTBUG-38144
Change-Id: I24aa28480cc6ae09abf91d80378970565a29b254
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>

cregit: fd6a2d1c8ff0488757378080f6003c434fd68de2 https://github.com/qt/qtbase/commit/fd6a2d1c8ff0488757378080f6003c434fd68de2